# SEM4

./: .gitignore  Color  README.md  link.txt
CA/: ALS.circ  proj1.circ
CA/4-bit-alu-master/: 4 BIT ALU.circ  4BIT SUBTRACTORmodified.circ  4BITADDER.circ  readme.txt
Codejam/: 2017_1.py  2017_2.py  2019-1.cpp  2019_1.py  2019_2.py  2019_3.py  2019_4.cpp  2019_4.py  2019_5.py  fact.py  five.py  in  ir.py  lm.py  mobile.py  o  out  outputBlarge.txt  temp.py  test2.py  x.py  y.py
DBMS/: Relational Model.doc
OS/: 03-Processes.ppt  prac.txt  quest.txt
OS/Operating-System-CS356-Project-2-master/: CMakeLists.txt  run.sh  scheduler.h
PM/: Directing.material.docx  Financial Management.pptx  Functional Management.pptx  Human resource management.docx  Introduction -POM.pptx  Production Management.docx  marketing Management.pptx
PS/: AnimationPlot.py  PS_basic.ipynb  Practical3-BayesTheorem.ipynb  Practical4.html  Practical4.ipynb  Practical5.ipynb  Practical7.ipynb  Practical8.ipynb  additional_problem.txt  notebook.tex
PSC/: 18bce259_Practical4.ipynb  18bce259_practical2.ipynb  18bce259_practical3.ipynb  18bce259_practical6.ipynb  Att.csv  ClassProject.py  Definition  FirstPractical.ipynb  HandsOnML.ipynb  HomeWork.ipynb  MatplotLib.html  Testing.py  TimeData.txt  Wages.txt  calc.txt  calculated_data.txt  create_dataset.ipynb  employee.txt  mobile_usage_data.csv  poem.txt  test_data.txt  testingScope.py
WT/: 2CS405_Web-Technologies_LOP.doc.docx  ImageMap&Form.html  JavaSPrac.html  Pract3.html  ShreyViradiya.bsdesign  prac1.html  prac2.html  table.html
(+672 files in other folders)
